--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">Beranda</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Profil</a><div class="dropdown-menu" aria-labelledby="dropdown-651"><a class="dropdown-item text-black display-4" href="sejarah.html">Sejarah Sekolah</a><a class="show dropdown-item text-black display-4" href="visidanmisi.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="motodantujuan.html">Moto &amp; Tujuan</a><a class="show dropdown-item text-black display-4" href="strukturorganisasi.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="fasilitas.html">Fasilitas</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="galeri.html">Galeri</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black show display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Informasi</a><div class="dropdown-menu show" aria-labelledby="dropdown-528" data-bs-popper="none"><a class="dropdown-item text-black display-4" href="pendaftaran.html">Pendaftaran</a><a class="show dropdown-item text-black display-4" href="pengumuman.html">Pengumuman</a></div></li>
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Profil</a><div class="dropdown-menu" aria-labelledby="dropdown-651"><a class="dropdown-item text-black display-4" href="sejarah.html">Sejarah Sekolah</a><a class="show dropdown-item text-black display-4" href="visidanmisi.html">Visi &amp; Misi</a><a class="dropdown-item text-black display-4" href="motodantujuan.html">Moto &amp; Tujuan</a><a class="show dropdown-item text-black display-4" href="strukturorganisasi.html">Struktur Organisasi</a><a class="dropdown-item text-black display-4" href="fasilitas.html">Fasilitas</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="galeri.html">Galeri</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Informasi</a><div class="dropdown-menu" aria-labelledby="dropdown-528"><a class="dropdown-item text-black display-4" href="pendaftaran.html">Pendaftaran</a><a class="show dropdown-item text-black display-4" href="pengumuman.html">Pengumuman</a></div></li>
                     <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page9.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Alumni</a><div class="dropdown-menu" aria-labelledby="dropdown-676"><a class="dropdown-item text-black display-4" href="alumni.html">Angkatan XXXVII</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontak.html">Kontak</a></li></ul>
                 
@@ -152,8 +152,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNOfdNr3c-modal" data-bs-target="#udNOfdNr3c-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNTDp91F0-modal" data-bs-target="#udNTDp91F0-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -161,8 +161,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Upacara Bendera setiap hari Senin</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNOfdNr3c-modal" data-bs-target="#udNOfdNr3c-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNTDp91F0-modal" data-bs-target="#udNTDp91F0-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.14.55-fc3d197c-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -170,8 +170,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Kegiatan Rutin Senam Pagi setiap hari Jum'at</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNOfdNr3c-modal" data-bs-target="#udNOfdNr3c-modal">
-                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNTDp91F0-modal" data-bs-target="#udNTDp91F0-modal">
+                    <img class="w-100" src="assets/images/img-20240519-wa0086-646x484.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -179,8 +179,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><br><strong>Kegiatan Rutin Giat Literasi Jum'at</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNOfdNr3c-modal" data-bs-target="#udNOfdNr3c-modal">
-                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#udNTDp91F0-modal" data-bs-target="#udNTDp91F0-modal">
+                    <img class="w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-22.54.22-49c44d05-596x447.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -189,11 +189,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udNOfdNr3c-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="udNTDp91F0-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-udNOfdNr3c" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-udNTDp91F0" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/gambar-whatsapp-2024-05-15-pukul-23.07.24-08c3b67f-596x447.jpg" alt="Mobirise Website Builder">
@@ -209,18 +209,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udNOfdNr3c" data-bs-target="#lb-udNOfdNr3c"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-udNTDp91F0" data-bs-target="#lb-udNTDp91F0"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udNOfdNr3c">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-udNTDp91F0">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udNOfdNr3c">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-udNTDp91F0">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
